--- a/#boostfolia/index.html
+++ b/#boostfolia/index.html
@@ -1,69 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>#portfolio</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>#portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="bd-example">
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/1477476566-1338.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>WE THINK CREATIVE BE CREATIVE</h1>
-          <p>LIKE TO DO CREATIVE WORKS</p>
+    <header>
+        <div class="top_header">
+            <!--Finder-->
+            <div class="container h-100">
+                <div class="d-flex justify-content-center h-100">
+                    <div class="searchbar">
+                        <input class="search_input" type="text" name="" placeholder="Search...">
+                        <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!--Logo-->
+            <div class="logo">
+                <img src="img/5ad1c8c56f06c.jpg" alt=""><span class="namejob">BOOSTFOLIA</span></img>
+            </div>
+            <!--Menu-Button-->
+            <div class="menu-block">
+                <a href="#" class="menu-btn-item"><span></span></a>
+                <nav class="menu">
+                    <a href="#AboutUS"><i class="fas fa-address-book"></i></a>
+                    <a href="#"><i class="far fa-folder-open"></i></a>
+                    <a href="#"><i class="fab fa-earlybirds"></i></a>
+                    <a href="#"><i class="fas fa-anchor"></i></a>
+                    <a href="#"><i class="fas fa-american-sign-language-interpreting"></i></a>
+                </nav>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="img/1477476576-6949.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>WE THINK CREATIVE BE CREATIVE</h1>
-          <p>LIKE TO DO CREATIVE WORKS</p>
+        <script>
+            $(".menu-btn-item").on("click", function(e) {
+                e.preventDefault();
+                $(".menu-btn-item").toggleClass("menu-btn-item_active");
+                $(".menu").toggleClass("menu_active");
+            });
+            $(".logo").on("click", function(e) {
+                e.preventDefault();
+                $(".namejob").toggleClass("namejob_active");
+            });
+
+        </script>
+    </header>
+    <!--Slider-Menu-->
+    <div class="wrap">
+        <div id="arrow-left" class="arrow"></div>
+        <div id="slider">
+            <div class="slide slide1">
+                <div class="slide-content">
+                    <h1>WE THINK CREATIVE BE CREATIVE</h1>
+                    <p>LIKE TO DO CREATIVE WORKS</p>
+                </div>
+            </div>
+            <div class="slide slide2">
+                <div class="slide-content">
+                    <h1>WE THINK CREATIVE BE CREATIVE</h1>
+                    <p>LIKE TO DO CREATIVE WORKS</p>
+                </div>
+            </div>
+            <div class="slide slide3">
+                <div class="slide-content">
+                    <h1>WE THINK CREATIVE BE CREATIVE</h1>
+                    <p>LIKE TO DO CREATIVE WORKS</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="img/1477476580-2080.jpeg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>WE THINK CREATIVE BE CREATIVE</h1>
-          <p>LIKE TO DO CREATIVE WORKS</p>
-        </div>
-      </div>
+        <div id="arrow-right" class="arrow"></div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
+    <!--#About US#-->
+    <div class="main">
+        <div class="section_AboutUS">
+            <h1 id="AboutUS">About US</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <div class="row">
+                <div class="figure">
+                    <div class="figure_menu">
+                        <i class="pe-7s-micro"></i>
+                        <h6>CREATIVE DESIGN</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
+                    </div>
+                    <div class="figure_menu">
+                        <i class="pe-7s-bottom-arrow"></i>
+                        <h6>UNIQU PORTFOLIO</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
+                    </div>
+                    <div class="figure_menu">
+                        <i class="pe-7s-loop"></i>
+                        <h6>INFINITE UPDATES</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Video block -->
+    <div class="section_video">
+        <div class="row_video">
+            <div class="text_block">
+                <h3>WATCH BEHIND THE SCENE</h3>
+                <p>Lorem ipsum dolo the lorem r sit amet, consectetur adipisicing Lorem ipsum dolo the lorem r sit amet, consectetur adipisicingLorem ipsum dolo the lorem r sit amet, consectetur adipisicing Lorem </p>
+                <div class="playnow_btn">
+                    <button>PLAY NOW</button>
+                </div>
+            </div>
+            <div class="video_block">
+                <video>
+                    <source src="videos/First%20flight%20(2006)%20DVDRip%20%5BHurtom%5D.mp4" type="video/mp4; codecs=" avc1.42E01E, mp4a.40.2"">
+                    <source src="videos/First%20flight%20(2006)%20DVDRip%20%5BHurtom%5D.webm" type="video/webm; codecs=" vp8, vorbis"">
+                    <source src="videos/First%20flight%20(2006)%20DVDRip%20%5BHurtom%5D.avi" type="video/avi; codecs=" theora, vorbis"">
+                </video>
+            </div>
+        </div>
+    </div>
+    <script>
+        $(".playnow_btn").on("click", function(e) {
+            e.preventDefault();
+            $("video").attr('controls', true);
+        });
+
+    </script>
+    <!-- OURWORKS -->
+    <div class="second_block">
+        <div class="section_OURWORKS">
+            <h1 id="OUR_WORKS">OUR WORKS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </div>
+        <div class="title_menu">
+            <h6>ALL PROJECTS</h6>
+            <h6>MOBILE APP</h6>
+            <h6>BRANDING</h6>
+            <h6>WEB DESIGN</h6>
+            <h6>PHOTOGRAPHY</h6>
+        </div>
+    </div>
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>	
+    <script src="app.js"></script>
 </body>
+
 </html>
