--- a/#boostfolia/index.html
+++ b/#boostfolia/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <title>#portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -48,7 +51,6 @@
                 e.preventDefault();
                 $(".namejob").toggleClass("namejob_active");
             });
-
         </script>
     </header>
     <!--Slider-Menu-->
@@ -70,7 +72,7 @@
             <div class="slide slide3">
                 <div class="slide-content">
                     <h1>WE THINK CREATIVE BE CREATIVE</h1>
-                    <p>LIKE TO DO CREATIVE WORKS</p>
+                    <p>LIKE TODO CREATIVE WORKS</p>
                 </div>
             </div>
         </div>
@@ -82,18 +84,18 @@
             <h1 id="AboutUS">About US</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             <div class="row">
-                <div class="figure">
-                    <div class="figure_menu">
+                <div class="square">
+                    <div class="square_menu">
                         <i class="pe-7s-micro"></i>
                         <h6>CREATIVE DESIGN</h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
                     </div>
-                    <div class="figure_menu">
+                    <div class="square_menu">
                         <i class="pe-7s-bottom-arrow"></i>
                         <h6>UNIQU PORTFOLIO</h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
                     </div>
-                    <div class="figure_menu">
+                    <div class="square_menu">
                         <i class="pe-7s-loop"></i>
                         <h6>INFINITE UPDATES</h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
@@ -126,21 +128,162 @@
             e.preventDefault();
             $("video").attr('controls', true);
         });
-
     </script>
     <!-- OURWORKS -->
     <div class="second_block">
         <div class="section_OURWORKS">
             <h1 id="OUR_WORKS">OUR WORKS</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <div class="title_menu">
+                <h6>ALL PROJECTS</h6>
+                <h6>MOBILE APP</h6>
+                <h6>BRANDING</h6>
+                <h6>WEB DESIGN</h6>
+                <h6>PHOTOGRAPHY</h6>
+            </div>
         </div>
-        <div class="title_menu">
-            <h6>ALL PROJECTS</h6>
-            <h6>MOBILE APP</h6>
-            <h6>BRANDING</h6>
-            <h6>WEB DESIGN</h6>
-            <h6>PHOTOGRAPHY</h6>
+        <!-- Pictures grid -->
+        <div class="panorama_pictures">
+            <div class="menu_pictures">
+                <img src="img/panorama/panorama13.jpg" alt="13">
+                <img src="img/panorama/panorama14.jpg" alt="14">
+                <img src="img/panorama/panorama15.jpg" alt="15">
+                <img src="img/panorama/panorama5.jpg" alt="5">
+                <img src="img/panorama/panorama6.jpg" alt="6">
+                <img src="img/panorama/panorama12.jpg" alt="12">
+                <img src="img/panorama/panorama4.jpg" alt="4">
+                <img src="img/panorama/panorama9.jpg" alt="9">
+                <img src="img/panorama/panorama10.jpg" alt="10">
+                <img src="img/panorama/panorama11.jpg" alt="11">
+            </div>
         </div>
+
+        <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/miniSlider/images1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item"><img src="img/miniSlider/images2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/miniSlider/images3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div class="third_block">
+        <div class="sectoin_WHOWEARE">
+            <h1 id="WHOWEARE">WHO WE ARE</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </div>
+        <div class="myresume">
+            <div class="myteam">
+                <img src="img/foto.jpg" alt="#2">
+                <h1>Rohini Godbole</h1>
+                <p>DESIGNER</p>
+                <span><img src="img/icons/png/001-behance.png" alt="1">
+                    <img src="img/icons/png/002-facebook.png" alt="2">
+                    <img src="img/icons/png/003-twitter.png" alt="3"></span>
+            </div>
+            <div class="myskills">
+                <div class="text">
+                    <h1>SKILLS</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+                </div>
+                <div class="animate_skills">
+                    <h1 class="anime">PHOTOSHOP</h1>
+                    <p>88%</p>
+                    <h1 class="anime">ILLUSTRATOR</h1>
+                    <p>92%</p>
+                    <h1 class="anime">SKETCH</h1>
+                    <p>90%</p>
+                    <h1 class="anime">AFTER EFFECTS</h1>
+                    <p>88%</p>
+                </div>
+            </div>
+        </div>
+        <div class="sectionSomefeatures">
+            <h1>SOME FEATURES</h1>
+            <div class="iconBlock">
+                <div class="iconrow">
+                    <a href="">
+                        <img src="img/icons/002-film-editing.png" alt="1">
+                        <h6>Shortcodes</h6>
+                        <p>46</p>
+                    </a>
+                    <a href="">
+                        <img src="img/icons/003-computer.png" alt="1">
+                        <h6>Inegrated Plugins</h6>
+                        <p>128</p>
+                    </a>
+                    <a href="">
+                        <img src="img/icons/001-idea.png" alt="1">
+                        <h6>Creative Products</h6>
+                        <p>450</p>
+                    </a>
+                    <a href="">
+                        <img src="img/icons/004-actor.png" alt="1">
+                        <h6>Clients Worldwide</h6>
+                        <p>100+</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Footer">
+        <div class="sectionGetInTouch">
+            <h1>Get In Touch</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim.</p>
+        </div>
+        <div class="FooterInput">
+            <div class="FooterWrap">
+                <div class="inputName">
+                    <div class="mat-div">
+                        <label for="first-name" class="mat-label">Name <span>*</span></label>
+                        <input type="text" class="mat-input" id="first-name">
+                    </div>
+                </div>
+                <div class="inputMail">
+                    <div class="mat-div">
+                        <label for="first-name" class="mat-label">Mail <span>*</span></label>
+                        <input type="text" class="mat-input" id="last-name">
+                    </div>
+                </div>
+                <div class="inputMessage">
+                    <div class="mat-div">
+                        <label for="address" class="mat-label">Text Message <span>*</span></label>
+                        <input type="text" class="mat-input" id="address">
+                    </div>
+                </div>
+                <script>
+                    $(".mat-input").focus(function() {
+                        $(this).parent().addClass("is-active is-completed");
+                    });
+
+                    $(".mat-input").focusout(function() {
+                        if ($(this).val() === "")
+                            $(this).parent().removeClass("is-completed");
+                        $(this).parent().removeClass("is-active");
+                    })
+                </script>
+            </div>
+        </div>
+            <div class="FooterButton">
+                <button>SEND MESSAGE</button>
+            </div>
     </div>
 
 
@@ -148,7 +291,10 @@
 
 
 
-    <script src="app.js"></script>
-</body>
 
-</html>
+        <script src="js/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</body></html>
